force-app/main/default/objects/Reservation__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <label>Room</label>
    <referenceTo>Room__c</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>RoomReservations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>