force-app/main/default/objects/Reservation__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>